atualiza versão mobile

--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
     <link href="css/estiloProduto.css" rel="stylesheet" />
     <link href="css/estilo.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <script type="text/javascript" src="arq.js"></script>
+    <script type="text/javascript" src="js/arq.js"></script>
 </head>
 
 <body>
@@ -23,42 +23,42 @@
     <div class="centro" id="centroProduto">
         <a href="paginasProdutos/produto1.html">
             <div class="card">
-                <img id="produto1" src="images/produtos/1principal.png" onmouseover="secundariaProduto1()" onmouseout="principalProduto1()">
+                <img id="produto1" src="images/produtos/1principal.png" onmouseover="secundariaProduto('produto1', 'images/produtos/1secundaria.png')" onmouseout="principalProduto('produto1', 'images/produtos/1principal.png')">
                 <p> Blusa Wonder Woman </p>
             </div> <!--card-->
         </a>
 
         <a href="paginasProdutos/produto2.html">
             <div class="card">
-                <img id="produto2" src="images/produtos/2principal.png" onmouseover="secundariaProduto2()" onmouseout="principalProduto2()">
+                <img id="produto2" src="images/produtos/2principal.png" onmouseover="secundariaProduto('produto2', 'images/produtos/2secundaria.png')" onmouseout="principalProduto('produto2', 'images/produtos/2principal.png')">
                 <p> Blusa listrada </p>
             </div> <!--card-->
         </a>
 
         <a href="paginasProdutos/produto3.html">
             <div class="card">
-                <img id="produto3" src="images/produtos/3principal.png" onmouseover="secundariaProduto3()" onmouseout="principalProduto3()">
+                <img id="produto3" src="images/produtos/3principal.png" onmouseover="secundariaProduto('produto3', 'images/produtos/3secundaria.png')" onmouseout="principalProduto('produto3', 'images/produtos/3principal.png')">
                 <p> Calça de couro </p>
             </div> <!--card-->
         </a>
 
         <a href="paginasProdutos/produto4.html">
             <div class="card">
-                <img id="produto4" src="images/produtos/4principal.png" onmouseover="secundariaProduto4()" onmouseout="principalProduto4()">
+                <img id="produto4" src="images/produtos/4principal.png" onmouseover="secundariaProduto('produto4', 'images/produtos/4secundaria.png')" onmouseout="principalProduto('produto4', 'images/produtos/4principal.png')">
                 <p> Calça com cinto </p>
             </div> <!--card-->
         </a>
 
         <a href="paginasProdutos/produto5.html">
             <div class="card">
-                <img id="produto5" src="images/produtos/5principal.png" onmouseover="secundariaProduto5()" onmouseout="principalProduto5()">
+                <img id="produto5" src="images/produtos/5principal.png" onmouseover="secundariaProduto('produto5', 'images/produtos/5secundaria.png')" onmouseout="principalProduto('produto5','images/produtos/5principal.png')">
                 <p> Calça jeans </p>
             </div> <!--card-->
         </a>
 
         <a href="paginasProdutos/produto6.html">
             <div class="card">
-                <img id="produto6" src="images/produtos/6principal.png" onmouseover="secundariaProduto6()" onmouseout="principalProduto6()">
+                <img id="produto6" src="images/produtos/6principal.png" onmouseover="secundariaProduto('produto6', 'images/produtos/6secundaria.png')" onmouseout="principalProduto('produto6', 'images/produtos/6principal.png')">
                 <p> Jaqueta jeans </p>
             </div> <!--card-->
         </a>
