--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <link href="css/estilo.css" rel="stylesheet" />
     <link href="css/estiloInfo.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <script type="text/javascript" src="arq.js">
+    <script type="text/javascript" src="js/arq.js">
     </script>
 </head>
 
