atualiza estilo das páginas

--- a/paginasProdutos/produto2.html
+++ b/paginasProdutos/produto2.html
@@ -27,7 +27,9 @@
                 <img class="fotoPequena" src="../images/produtos/2principal.png" onmouseover="mudaOpacidade(0)" onmouseout="resetaOpacidade(0)" onclick="mudaFotoPrincipal('../images/produtos/2principal.png')"/>
                 <img class="fotoPequena" src="../images/produtos/2secundaria.png" onmouseover="mudaOpacidade(1)" onmouseout="resetaOpacidade(1)" onclick="mudaFotoPrincipal('../images/produtos/2secundaria.png')"/>
             </div> <!--conjuntoFotosPequenas-->
-            <img id="destaque" src="../images/produtos/2principal.png"/>
+            <figure>
+                <img id="destaque" src="../images/produtos/2principal.png"/>
+            </figure>
             <div id="infoProduto">
                 <h1> Blusa multicolor com listras feminina </h1>
                 <h3> <span>por</span> R$ 49,99 </h3>
