--- a/paginasProdutos/produto3.html
+++ b/paginasProdutos/produto3.html
@@ -27,7 +27,9 @@
                 <img class="fotoPequena" src="../images/produtos/3principal.png" onmouseover="mudaOpacidade(0)" onmouseout="resetaOpacidade(0)" onclick="mudaFotoPrincipal('../images/produtos/3principal.png')"/>
                 <img class="fotoPequena" src="../images/produtos/3secundaria.png" onmouseover="mudaOpacidade(1)" onmouseout="resetaOpacidade(1)" onclick="mudaFotoPrincipal('../images/produtos/3secundaria.png')"/>
             </div> <!--conjuntoFotosPequenas-->
-            <img id="destaque" src="../images/produtos/3principal.png"/>
+            <figure>
+                <img id="destaque" src="../images/produtos/3principal.png"/>
+            </figure>
             <div id="infoProduto">
                 <h1> Calça feminina de courino </h1>
                 <h3> <span>por</span> R$ 99,00 </h3>
