--- a/paginasProdutos/produto4.html
+++ b/paginasProdutos/produto4.html
@@ -27,7 +27,9 @@
                 <img class="fotoPequena" src="../images/produtos/4principal.png" onmouseover="mudaOpacidade(0)" onmouseout="resetaOpacidade(0)" onclick="mudaFotoPrincipal('../images/produtos/4principal.png')"/>
                 <img class="fotoPequena" src="../images/produtos/4secundaria.png" onmouseover="mudaOpacidade(1)" onmouseout="resetaOpacidade(1)" onclick="mudaFotoPrincipal('../images/produtos/4secundaria.png')"/>
             </div> <!--conjuntoFotosPequenas-->
-            <img id="destaque" src="../images/produtos/4principal.png"/>
+            <figure>
+                <img id="destaque" src="../images/produtos/4principal.png"/>
+            </figure>
             <div id="infoProduto">
                 <h1> Calça de alfaiataria com cinto feminina </h1>
                 <h3> <span>por</span> R$ 189,00 </h3>
