--- a/paginasProdutos/produto6.html
+++ b/paginasProdutos/produto6.html
@@ -24,10 +24,15 @@
     <div class="centro">
         <div class="fotosProduto">
             <div class="conjuntoFotosPequenas">
-                <img class="fotoPequena" src="../images/produtos/6principal.png" onmouseover="mudaOpacidade(0)" onmouseout="resetaOpacidade(0)" onclick="mudaFotoPrincipal('../images/produtos/6principal.png')"/>
-                <img class="fotoPequena" src="../images/produtos/6secundaria.png" onmouseover="mudaOpacidade(1)" onmouseout="resetaOpacidade(1)" onclick="mudaFotoPrincipal('../images/produtos/6secundaria.png')"/>
-            </div> <!--conjuntoFotosPequenas-->
-            <img id="destaque" src="../images/produtos/6principal.png"/>
+                <img class="fotoPequena" src="../images/produtos/6principal.png" onmouseover="mudaOpacidade(0)"
+                    onmouseout="resetaOpacidade(0)" onclick="mudaFotoPrincipal('../images/produtos/6principal.png')" />
+                <img class="fotoPequena" src="../images/produtos/6secundaria.png" onmouseover="mudaOpacidade(1)"
+                    onmouseout="resetaOpacidade(1)" onclick="mudaFotoPrincipal('../images/produtos/6secundaria.png')" />
+            </div>
+            <!--conjuntoFotosPequenas-->
+            <figure>
+                <img id="destaque" src="../images/produtos/6principal.png" />
+            </figure>
             <div id="infoProduto">
                 <h1> Jaqueta jeans com bordado feminina</h1>
                 <h3> <span>por</span> R$ 139,00 </h3>
@@ -41,8 +46,10 @@
                     <li> <span> Campanha: Verão 2022 </span> </li>
                 </ul>
                 <button onclick="alertaComprar()"> Comprar </button>
-            </div><!--infoProduto-->
-        </div><!--fotosProduto-->
+            </div>
+            <!--infoProduto-->
+        </div>
+        <!--fotosProduto-->
     </div> <!-- centro -->
 </body>
 
