--- a/paginasProdutos/produto1.html
+++ b/paginasProdutos/produto1.html
@@ -27,7 +27,9 @@
                 <img class="fotoPequena" src="../images/produtos/1principal.png" onmouseover="mudaOpacidade(0)" onmouseout="resetaOpacidade(0)" onclick="mudaFotoPrincipal('../images/produtos/1principal.png')"/>
                 <img class="fotoPequena" src="../images/produtos/1secundaria.png" onmouseover="mudaOpacidade(1)" onmouseout="resetaOpacidade(1)" onclick="mudaFotoPrincipal('../images/produtos/1secundaria.png')"/>
             </div> <!--conjuntoFotosPequenas-->
-            <img id="destaque" src="../images/produtos/1principal.png"/>
+            <figure>
+                <img id="destaque" src="../images/produtos/1principal.png"/>
+            </figure>
             <div id="infoProduto">
                 <h1> Blusa com estampa Wonder Woman feminina </h1>
                 <h3> <span>por</span> R$ 50,00 </h3>
