--- a/paginasProdutos/produto5.html
+++ b/paginasProdutos/produto5.html
@@ -27,7 +27,9 @@
                 <img class="fotoPequena" src="../images/produtos/5principal.png" onmouseover="mudaOpacidade(0)" onmouseout="resetaOpacidade(0)" onclick="mudaFotoPrincipal('../images/produtos/5principal.png')"/>
                 <img class="fotoPequena" src="../images/produtos/5secundaria.png" onmouseover="mudaOpacidade(1)" onmouseout="resetaOpacidade(1)" onclick="mudaFotoPrincipal('../images/produtos/5secundaria.png')"/>
             </div> <!--conjuntoFotosPequenas-->
-            <img id="destaque" src="../images/produtos/5principal.png"/>
+            <figure>
+                <img id="destaque" src="../images/produtos/5principal.png"/>
+            </figure>
             <div id="infoProduto">
                 <h1> Calça mom jeans azul claro feminina </h1>
                 <h3> <span>por</span> R$ 119,00 </h3>
